# naengo-ai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  architecture.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  insert_sample_recipe.py  pyproject.toml  recipe.json
app/: main.py
db/: schema.sql
docs/: 00-index.md  architecture.md  presentation.md
scripts/: add_embeddings.py  backfill_foodsafetykorea_kcal_per_serving.py  backfill_ingredient_amount_notes.py  backfill_recipe_classifications.py  backfill_source_cooking_time.py  bulk_approve_sources.py  import_approved_recipe_sources.py  import_foodsafetykorea_sources.py  import_recipe_sources.py  insert_new_recipe.py  insert_recipe.py  parse_10000recipe_sources.py  parse_foodsafetykorea_sources.py  parse_recipe_sources.py  recipe.json  reset_10000recipe_extractions.py  scrape_10000recipe.py  upsert_recipes.py
tests/: conftest.py  test_admin_chat_rooms_api.py  test_admin_pending_recipes_api.py  test_admin_recipes_api.py  test_admin_user_recipes_api.py  test_agent_service_routing.py  test_api_errors.py  test_import_foodsafetykorea_sources.py  test_ingredient_amount_note_service.py  test_intent_agent_router.py  test_intent_classifier.py  test_live_research_service.py  test_main.py  test_parse_10000recipe_kcal_per_serving.py  test_parse_10000recipe_sources.py  test_parse_foodsafetykorea_sources.py  test_pending_recipe_service.py  test_profile_update_service.py  test_recipe_classification_service.py  test_recipe_embedding_service.py  test_recipe_import_media_policy.py  (+12 more)
(+152 files in other folders)
